--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+7-advanced
+8-obj
+ray-tracer
 thebookofshaders
+twgl.js
 WebGL_Guide_Code
 webgl-sample
 webgl-fundamentals
-8-project
-twgl.js
+
+
